--- a/public/user.css
+++ b/public/user.css
@@ -756,16 +756,16 @@ img {
 }
 
 .return {
-    position: relative;
-    background: #048a9c;
-    color: #fff;
-    border-radius: 120px;
-    padding: 0 35px;
-    height: 75px;
-    border: 2px solid #1de5ff;
-    box-shadow: 0 0 40px 0px rgb(255, 255, 255, 0.5);
-    -webkit-box-shadow: 0 0 40px 0px rgb(255, 255, 255, 0.5);
-    font-size: 24px;
+  position: relative;
+  background: #048a9c;
+  color: #fff;
+  border-radius: 120px;
+  padding: 0 35px;
+  height: 75px;
+  border: 2px solid #1de5ff;
+  box-shadow: 0 0 40px 0px rgb(255, 255, 255, 0.5);
+  -webkit-box-shadow: 0 0 40px 0px rgb(255, 255, 255, 0.5);
+  font-size: 24px;
 }
 
 .unauthor .container {
@@ -793,9 +793,21 @@ a {
   font-size: 24px;
 }
 
-
 b {
   color: #f7173c;
   font-size: larger;
   text-transform: uppercase;
+}
+
+.credits {
+  bottom: 5px;
+  position: fixed;
+  padding: 10px;
+  width: 100%;
+  text-align: center;
+  a {
+    font-size: 17px;
+    padding: 5px 10px;
+    margin-left: 5px;
+  }
 }
